--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
-@import 'base/_fonts';
-@import 'base/_reset';
+@import 'base/fonts';
+@import 'base/reset';
 @import 'components/_btn';
 @import 'components/_footer';
 @import 'components/_form';
@@ -7,5 +7,5 @@
 @import 'components/_images';
 @import 'components/_nav';
 @import 'pages/_about';
-@import 'variables/_colour';
-@import 'variables/_mediaqueries';
+@import 'variables/colour';
+@import 'variables/mediaqueries';
