--- a/sass/variables/colour.scss
+++ b/sass/variables/colour.scss
@@ -1,5 +1,7 @@
-$white: white;
-$green1:#2B8730;
-$green2:#1A4D0F;
-$black:#000000;
-$grey:#474747;
+$colour01: #FFFFFF;
+$colour02: #000000;
+$colour03: #474747;
+$colour04: #2B8730;
+$colour05: #1A4D0F;
+
+
