--- a/css/base/fonts.css
+++ b/css/base/fonts.css
@@ -1,3 +1,3 @@
-@import url("http://fontawesome.io/assets/font-awesome/css/font-awesome.css");
+@import url("https://fonts.googleapis.com/css?family=Abel&display=swap");
 
 /*# sourceMappingURL=fonts.css.map */
