--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-@import url("http://fontawesome.io/assets/font-awesome/css/font-awesome.css");
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
+@import url("https://fonts.googleapis.com/css?family=Abel&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -45,5 +45,27 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0; }
+
+nav ul li {
+  list-style: none;
+  display: block;
+  background: #FFFFFF;
+  text-align: center;
+  width: 100%;
+  height: 40px;
+  font-size: 18px;
+  padding: 10px 0px;
+  margin: 20px auto; }
+nav ul a {
+  text-decoration: none;
+  color: #000000; }
+
+@media only screen and (min-width: 600px) {
+  nav ul li {
+    display: inline;
+    margin-right: 50px; }
+  nav ul a {
+    width: 150px;
+    padding: 20px; } }
 
 /*# sourceMappingURL=style.css.map */
