--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
    License: none (public domain)
 */
 @import url("https://fonts.googleapis.com/css?family=Abel&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Abel&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -46,6 +47,72 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+html,
+body {
+  font-family: 'abel', sans-serif;
+  color: #1A4D0F;
+  background-color: #1A4D0F;
+  overflow-x: hidden; }
+
+.container {
+  margin: 0 auto;
+  width: 90%;
+  max-width: 960px; }
+
+input {
+  border: 2px solid white;
+  border-radius: 5px;
+  padding: 15px 30px;
+  box-sizing: border-box;
+  width: 100%; }
+
 nav ul li {
   list-style: none;
   display: block;
@@ -60,7 +127,7 @@ nav ul a {
   text-decoration: none;
   color: #000000; }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 400px) {
   nav ul li {
     display: inline;
     margin-right: 50px; }
