--- a/sass/base/fonts.scss
+++ b/sass/base/fonts.scss
@@ -1,1 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Abel&display=swap');
+// body{
+// 	font-family: 'arial';
+// 	font-size: 15px; 
+// 	font-style: normal; 
+// 	font-variant: small-caps;
+// }
