--- a/sass/variables/colour.scss
+++ b/sass/variables/colour.scss
@@ -1,5 +1,8 @@
-$colour01: #FFFFFF;
-$colour02: #000000;
-$colour03: #474747;
-$colour04: #2B8730;
-$colour05: #1A4D0F;
+$color01: #FFFFFF;
+$color02: #000000;
+$color03: #474747;
+$color04: #2B8730;
+$color05: #1A4D0F;
+$color06: #807271;
+$color07: #f2f2f2;
+$color08: #C8C8C8;
