--- a/sass/components/nav.scss
+++ b/sass/components/nav.scss
@@ -1,26 +1,57 @@
-// //Navbar style//
+//Navbar style//
+.nav{
+	font-family: arial;
+    font-variant: small-caps;
+    font-size: 35px;
+    height: 50px;
+    text-align: center;
+    background-color: $color07;
+    border: $color08 3px solid;
+    margin: 0 auto;
+    width: 100%;
+    //left: 50%;
+    .navUl{
+        border: 1px solid $color08;
+		border-width: 1px 0;
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		text-align: center;
+         }
+        .navLi{
+	       display: inline;
+	    	
+            }
+            .navA{
+	    		display:inline-block;
+	    		padding:5px 20px;
+                text-decoration: none;
+                color: $color02;
 
+	    	  }
+}
+    
 // nav{
 // 	ul{
 // 		li{
 // 			list-style: none;
 // 			display: block;
-// 			background: $colour01;
+// 			background: $color01;
 // 			text-align: center;
 // 			width: 100%;
 // 			height: 40px;
-// 			font-size: 18px;
+// 			font-size: 25px;
 // 			padding: 10px 0px;
 // 			margin: 20px auto;
 // 		}
 // 		a{
 // 			text-decoration: none;
-// 			color: $colour02;
+// 			color: $color02;
 // 		}
 // 	}
 // }
 
-// @media only screen and (min-width: 400px){
+// @media only screen and (min-width: $phone){
 
 // 	nav{
 // 		ul{
@@ -36,3 +67,23 @@
 // 	}//end of nav//
 
 // }
+
+
+@media only screen and (max-width: $tablet) {
+.nav{
+    font-size: 20px;
+    height: 30px;
+    width: 96%;
+    
+    .navUl{
+            
+         }
+    .navLi{
+       
+        }
+    .navA{
+                
+        }
+    }
+
+    }
