--- a/css/style.css
+++ b/css/style.css
@@ -89,22 +89,57 @@ body {
 .para {
   font-family: 'abel';
   font-variant: small-caps;
+  padding: 16px; }
+
+.para__title {
+  color: #FFFFFF;
+  font-size: 70px;
+  position: absolute;
+  top: 10px;
+  left: 16px; }
+
+.para__about {
+  font-size: 32px;
   text-align: center; }
 
 .para__menu {
   color: #FFFFFF;
-  font-size: 70px;
-  float: left;
+  font-size: 60px;
   position: absolute;
-  top: 8px;
+  top: 24px;
   left: 16px; }
 
+.para__contact {
+  font-size: 25px;
+  text-align: center;
+  padding: 20px; }
+
 @media only screen and (max-width: 768px) {
-  .para__menu {
-    font-size: 60px; } }
+  .para__about {
+    font-size: 20px; }
+
+  .para__title {
+    font-size: 55px;
+    top: 10px; }
+
+  .para__contact {
+    font-size: 15px; } }
 @media only screen and (max-width: 375px) {
+  .para__title {
+    font-size: 30px;
+    top: 5px;
+    left: 8px; }
+
+  .para__about {
+    font-size: 15px; }
+
   .para__menu {
-    font-size: 30px; } }
+    font-size: 35px;
+    top: -2px;
+    left: 8px; }
+
+  .para__contact {
+    font-size: 12px; } }
 .section {
   position: relative;
   width: 100%; }
@@ -137,7 +172,8 @@ body {
   /* Style inputs with type="text", select elements and textareas */
   border-radius: 5px;
   background-color: #f2f2f2;
-  padding: 45px; }
+  padding: 45px;
+  padding-bottom: 60px; }
 
 .contact__form--input {
   width: 100%;
@@ -173,7 +209,8 @@ body {
 
 .section img {
   width: 100%;
-  height: auto; }
+  height: auto;
+  padding: 5px; }
 
 .nav {
   font-family: arial;
@@ -205,3 +242,5 @@ body {
     font-size: 20px;
     height: 30px;
     width: 96%; } }
+
+/*# sourceMappingURL=style.css.map */
