--- a/sass/components/form.scss
+++ b/sass/components/form.scss
@@ -6,6 +6,8 @@
  	  border-radius: 5px;
   	background-color: $color07;
   	padding: 45px;
+    padding-bottom: 60px;
+
 }
 
 .contact__form--input{
