--- a/sass/components/paragraph.scss
+++ b/sass/components/paragraph.scss
@@ -1,11 +1,11 @@
 .para{
   font-family: 'abel';
   font-variant: small-caps;
-  text-align: center;
+  padding: 16px;
 }
 
-//SPECIALS//
-.para__menu{
+
+.para__title{
   color: $color01;
   font-size: 70px;
   position: absolute;
@@ -15,19 +15,62 @@
 
 
 
+.para__about{
+  font-size: 32px;
+  text-align: center;
+}
 
+.para__menu{
+  color: $color01;
+  font-size: 60px;
+  position: absolute;
+  top: 24px;
+  left: 16px;
+}
+
+.para__contact{
+  font-size: 25px;
+  text-align: center;
+  padding: 20px;
+}
+
+
+
+//MEDIAQUERIES//
 
 @media only screen and (max-width: $tablet) {
-.para__menu{
-  
-  font-size: 60px;
-
+.para__about{
+  font-size: 20px;
+}
+.para__title{
+  font-size: 55px;
+  top: 10px;
+}
+.para__contact{
+  font-size: 15px;
 }
 }
 
 @media only screen and (max-width: $phone) {
-.para__menu{
+.para__title{
   font-size: 30px;
-
+  top: 5px;
+  left: 8px;
 }
+.para__about{
+  font-size: 15px;
+}
+.para__menu{
+  font-size: 35px;
+  top: -2px;
+  left: 8px;
+}
+.para__contact{
+  font-size: 12px;
+}
+
+
+
+
+
 }
